--- a/css/index.css
+++ b/css/index.css
@@ -1,45 +1,84 @@
 .button {
-  background-color: #6351fe;
+  background-color: var(--color-primary);
 }
 
+
+/* characteristics */
 .container-with-tiles {
-  margin-left: 10%;
-  margin-right: 10%;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 3rem;
-  row-gap: 3rem;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 1rem;
 }
 
+.tile {
+  background-color: #f8f8fa;
+  padding: 5%;
+} 
+
+.tile__heading {
+  text-align: center;
+}
+
+.tile__img-container img {
+  width: 100%;
+  height: 12rem;
+  object-fit: contain;
+}
+
+@media screen and (min-width: 768px) {
+  .container-with-tiles {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
+}
+
+/* idea */
 .container-with-the-idea {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  margin-left: 10%;
-  margin-right: 10%;
+  max-width: 1024px;
+  justify-content: center;
 }
 
 .idea {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: 1fr;
   gap: 2rem;
-  padding: 5rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .idea {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    gap: 2rem;
+  }
+}
+
+
+.idea__img-container {
+  display: flex;
+  justify-content: center;
+  height: 25rem;
 }
 
 .idea img {
-  max-width: 33%;
-  max-height: 70rem;
+  object-fit: contain;
+  width: 100%;
+  max-width: 17rem;
 }
 
-.idea div {
+/* .idea div {
   width: 66%;
-}
+} */
 
 .idea-text {
- font-size: 2rem;
- align-self: center;
- margin: 2rem;
- min-width: 66%;
+  font-size: 2rem;
+  align-self: center;
+  margin: 2rem;
+  min-width: 66%;
 }
 
 .hero-image {
@@ -51,22 +90,4 @@
 
 .text-centered {
   text-align: center;
-  margin-top: 10rem;
-  margin-bottom: 5rem;
 }
-
-.tile {
-  background-color: #f8f8fa;
-  padding: 5%;
-}
-
-@media screen and (max-width: 479px) {
-  .kb_visual {
-    z-index: 0;
-    width: 60%;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0;
-  }
-}
-
