cleanup presets and create typography file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{page.description}}">
   <link rel="stylesheet" href="css/vars.css">
+  <link rel="stylesheet" href="css/typography.css">
   <link rel="stylesheet" href="css/webflow.css">
   <link rel="stylesheet" href="css/default.css">
   <link rel="stylesheet" href="css/index.css">
@@ -14,7 +15,7 @@
   <script defer data-domain="scs-architecture.org" src="https://plausible.io/js/script.outbound-links.js"></script>
 </head>
 
-<body class="body">
+<body>
 
   <!-- todo mobile -->
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
