--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/webflow.css">
   <link rel="stylesheet" href="css/default.css">
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/navigation.css">
   <link rel="icon" type="image/svg+xml" href="./img/favicon.svg" sizes="any">
   <script defer data-domain="scs-architecture.org" src="https://plausible.io/js/script.outbound-links.js"></script>
 </head>
@@ -20,33 +21,25 @@
   <!-- todo mobile -->
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
     role="banner" class="navbar w-nav">
-    <div class="navbar-container w-container">
-      <nav role="navigation" class="nav-menu w-nav-menu">
-        <div class="nav-link-div">
-          <a href="index.html" aria-current="page"
-            class="nav-link w-nav-link {% if page.name == 'index.html' %} w--current {% endif %}">What</a>
-        </div>
-        <div class="nav-link-div">
-          <a href="why.html" class="nav-link w-nav-link {% if page.name == 'why.md' %} w--current {% endif %}">Why</a>
-        </div>
-        <div class="nav-link-div">
-          <a href="faq.html" class="nav-link w-nav-link {% if page.name == 'faq.md' %} w--current {% endif %}">FAQ</a>
-        </div>
-        <div class="nav-link-div">
-          <a href="vs-ms.html" class="nav-link w-nav-link {% if page.name == 'vs-ms.md' %} w--current {% endif %}">SCS
-            vs. Microservice</a>
-        </div>
-        <div class="nav-link-div">
-          <a href="links.html"
-            class="nav-link w-nav-link {% if page.name == 'links.md' %} w--current {% endif %}">Links</a>
+    <div class="container">
+      <nav role="navigation" class="nav-menu w-nav-menu menu" id="menu" aria-label="menu">
+        <a class="menu-icon-link" href="#" aria-label="Close menu">
+          <img src="img/menu-close.svg" alt="Close Menu" class="menu-icon">
+          <span class="sr-only">Close menu</span>
+        </a>
+        <a href="index.html" aria-current="page" class="nav-link w-nav-link {% if page.name == 'index.html' %} w--current {% endif %}">What</a>
+        <a href="why.html" class="nav-link w-nav-link {% if page.name == 'why.md' %} w--current {% endif %}">Why</a>
+        <a href="faq.html" class="nav-link w-nav-link {% if page.name == 'faq.md' %} w--current {% endif %}">FAQ</a>
+        <a href="vs-ms.html" class="nav-link w-nav-link {% if page.name == 'vs-ms.md' %} w--current {% endif %}">SCS vs. Microservice</a>
+        <a href="links.html" class="nav-link w-nav-link {% if page.name == 'links.md' %} w--current {% endif %}">Links</a>
+        <div class="nav-button">
+          <a href="https://github.com/innoq/SCS" class="nav-button-view w-button">Get it on Github</a>
         </div>
       </nav>
-      <div class="div-block">
-        <a href="https://github.com/innoq/SCS" class="nav-button-view w-button">Get it on Github</a>
-      </div>
-      <div class="menu-button w-nav-button">
-        <div class="icon w-icon-nav-menu"></div>
-      </div>
+      <a class="menu-icon-link" href="#menu" aria-label="Open menu">
+        <img src="img/menu-burger.svg" alt="Open Menu" class="menu-icon">
+        <span class="sr-only">Open menu</span>
+      </a>
     </div>
   </div>
   <main>
