adds a jump-to-top button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,19 +47,24 @@
     {% else %}
       {{ content }}
     {% endif %}
+    <a href="#" id="to-top">
+      <img src="img/chevron-up.svg" alt="Scroll To Top" class="to-top">
+      <span class="sr-only">Scroll To Top</span>
+    </a>
   </main>
   <footer class="footer">
-      <div class="container footer-container">
-        <a href="https://www.innoq.com/en/?pk_campaign=octopim&amp;pk_source=octopim-lp" target="_blank" class="link-footer">
-          <img src="img/INNOQ_Logo.svg" alt="INNOQ Logo" class="footer-logo"></img>
-        </a>
-        <h4 class="footer-heading">We give technology a purpose. We future-proof your ideas.</h4>
-        <p class="footer-text">Honest consulting, innovative thinking, and a passion for software development means: We deliver successful software solutions, infrastructure and business models.<br><br>
-          <a href="https://www.innoq.com/en/?pk_campaign=octopim&amp;pk_source=octopim-lp" target="_blank" class="link-footer">Visit our Website</a><br>
-          <a href="https://www.innoq.com/en/datenschutz" target="_blank" class="link-footer">Privacy Policy</a>
-        </p>
-      </div>
-    </footer>
+    <div class="container footer-container">
+      <a href="https://www.innoq.com/en/?pk_campaign=octopim&amp;pk_source=octopim-lp" target="_blank" class="link-footer">
+        <img src="img/INNOQ_Logo.svg" alt="INNOQ Logo" class="footer-logo"></img>
+      </a>
+      <h4 class="footer-heading">We give technology a purpose. We future-proof your ideas.</h4>
+      <p class="footer-text">Honest consulting, innovative thinking, and a passion for software development means: We deliver successful software solutions, infrastructure and business models.<br><br>
+        <a href="https://www.innoq.com/en/?pk_campaign=octopim&amp;pk_source=octopim-lp" target="_blank" class="link-footer">Visit our Website</a><br>
+        <a href="https://www.innoq.com/en/datenschutz" target="_blank" class="link-footer">Privacy Policy</a>
+      </p>
+    </div>
+  </footer>
+  <script src="../js/scroll.js"></script>
 </body>
 
 </html>
