adds jump-to-next-section button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,10 @@
       <img src="img/chevron-up.svg" alt="Scroll To Top" class="to-top">
       <span class="sr-only">Scroll To Top</span>
     </a>
+    <a href="#" id="jump-to-next-section">
+      <img src="img/chevron-down.svg" alt="Scroll To Next Section" class="jump-to-next-section">
+      <span class="sr-only">Scroll To Next Section</span>
+    </a>
   </main>
   <footer class="footer">
     <div class="container footer-container">
