--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/default.css">
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/navigation.css">
-  <link rel="icon" type="image/svg+xml" href="./img/favicon.svg" sizes="any">
+  <link rel="icon" type="image/x-icon" href="./img/favicon.ico" sizes="any">
   <script defer data-domain="scs-architecture.org" src="https://plausible.io/js/script.outbound-links.js"></script>
 </head>
 
